syntax = "proto3";

import "google/protobuf/empty.proto";
import "work_enum.proto";
package ru.tinkoff.academy;

option java_package = "ru.tinkoff.academy.proto.order";
option java_multiple_files = true;

service OrderInformService {
  rpc informStatus(OrderInformRequest) returns (google.protobuf.Empty);
}

message OrderInformRequest {
  string id = 1;
  OrderStatus status = 2;
  int64 orderId = 3;
}

enum OrderStatus {
  reject = 0;
  done = 1;
}
